--- a/src/pages/about/style.css
+++ b/src/pages/about/style.css
@@ -10,7 +10,9 @@
 .t_border {
     border-color: var(--text-color) !important;
 }
-
+p{
+    text-align: justify;
+}
 .progress-title {
     font-size: 16px;
     font-weight: 700;
